Salabots: popupu izmērs, lai nav daudz tukšumu; teksta iziešana ārpus fona faktūras; noņemta "Turpināt" poga no pēdējā skata; Stradiņa bilde nu iet ZEM augšā esošās līnijas. *Ghetto fix* Pievienots fancy scrollbars; Cik nu varēju, sataisīju fontu izmērus.
Jāmaina DB.

--- a/wp-content/themes/the-box-child/style.css
+++ b/wp-content/themes/the-box-child/style.css
@@ -88,32 +88,25 @@ This Theme is licensed under the GPL.
 /*Loading end*/
 
 /*Scrollbar*/
-/*::-webkit-scrollbar {
-    width: 12px;
+.nicescroll-rails{
+    width: 1vw !important;
+    max-width: 20px !important;
+    background-color: white !important;
 }
- 
- Track 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+
+.nicescroll-cursors{
+    background-color: #660000 !important;
+    width: 1vw !important;    
+    max-width: 20px !important;
+    border-style: none !important;
+    border-radius: 0 !important;
 }
- 
- Handle 
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: rgba(255,0,0,0.8); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
-}*/
 /*Scrollbar end*/
 
 html{
 	height: 100vh;
 	width: 100%;
+        min-width: 900px;
 }
 
 body{
@@ -205,6 +198,7 @@ p{
     width: 110%;
     left: -5% !important;
     height: 17%;    
+    z-index: 2;
 }
 #head_image div{
     /*background-image: url(images/family_header.jpg);*/
@@ -223,6 +217,7 @@ p{
     top:-3%;
     background-color: white;
     height: 4%;
+    z-index: 2;
 }
 
 #head_image_bot div{
@@ -374,7 +369,7 @@ ul.menu p{
     font-weight: normal;
     top: 20%;
     font-family: palatino;
-    font-size: 3.2vmin;
+    font-size: 1.6vmax;
     color: #575756;
     border-style: solid;
     border-width: thin;
@@ -396,10 +391,13 @@ ul.menu p{
     /*padding: 30px 0px 30px 0px;*/
 }
 
+
+
 img.alignleft{
     position: relative;
     margin-left: -85%;
     transform: translateY(-50%);
+    /*z-index:-2;*/
 }
 
 img.alignright{
@@ -483,7 +481,7 @@ p.author_text_single{
 }
 
 p.vnarrow.author_text_single{
-    transform: translateY(-150%);
+    transform: translateY(-200%);
     font-size: 0.7vmax !important;
 }
 
@@ -529,7 +527,7 @@ p.vnarrow.author_text_single{
 }
 /*Fūteris beidzas*/
 .readmore{
-    position: relative;
+    position: absolute;
     display: block;
     background-image: url(images/ui/readmore_idle.png);
     background-size: contain;
@@ -613,12 +611,13 @@ p.narrow{
     font-size: 0.9vmax;
     width: 40vw;
     text-align: justify;
+    line-height: 150%;
     /*text-justify: distribute;*/
     margin-left: 3vw;
     color: #575756;
     max-height: 80%;
     /*padding-top: 8vh;*/
-    padding-bottom: 20vh;
+    padding-bottom: 5vh;
 }
 
 .popup p{
@@ -629,7 +628,7 @@ p.narrow{
     top: 16vh !important;
     width: 50vw !important;
     left: 25vw !important;
-    min-height: 45vh;
+    /*min-height: 45vh;*/
     max-height: 65vh;
     overflow: visible !important;
 }
@@ -652,7 +651,7 @@ p.narrow{
 
 #cboxWrapper{
     max-width: 50vw;    
-    min-height: 45vh;
+    /*min-height: 45vh;*/
     max-height: 65vh;
 }
 
@@ -669,7 +668,7 @@ p.narrow{
     background-image: url(images/cardboard.jpg);
     background-position: center;
     background-size: cover;
-    min-height: 45vh !important;
+    /*min-height: 45vh !important;*/
     height: auto !important;
     max-height: 65vh !important;    
     overflow: hidden !important;
@@ -683,7 +682,7 @@ p.narrow{
     margin-bottom: 0;
     margin-top: 8vh;
     margin-bottom: 3vh;
-    overflow-y: auto !important;
+    overflow: hidden;
 }
 
 #cboxClose{
@@ -817,11 +816,29 @@ p.narrow{
     z-index: -1;
 }
 }*/
-/*@media screen and (max-width: 600px) {
-    p.text_right {
-        font-size: 18pt;
+@media screen and (max-width: 950px) {
+    .entry-title{
+        font-size: 14pt;
     }
-}*/
+    p.citation{
+        font-size: 9pt;
+    }
+    
+    .popup{
+        font-size: 9pt;
+    }
+    
+    #fore1{
+        font-size: 30pt;
+    }
+    #fore2{
+        width: 40%;
+        font-size: 15pt;
+    }
+    #fore3{
+        font-size: 9pt;
+    }
+}
  
 /*.anim-left{
     animation-name: left;
